frontend_tests/negative/constant_array_index/go.mod
module example.com/renvotests/negative/constant_array_index

go 1.25
